<resources>
    <string name="app_name">UIdesign</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">already have an account ?</string>
    <string name="click_here">Click here</string>
    <string name="image">image</string>
    <string name="imageview">imageview</string>
    <string name="login">Login</string>
    <string name="save_update">Save Update</string>
</resources>